pablogarin-front/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pablogarin-frontend
  labels:
    app: pablogarin-front
    test: test
  # annotations:
  #   fluxcd.io/tag.example-app: semver:~1.0
  #   fluxcd.io/automated: 'true'
spec:
  selector:
    matchLabels:
      app: pablogarin-front
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: pablogarin-front
    spec:
      containers:
      - name: pablogarin-front
        image: pablogarin/pablogarin-front:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        # livenessProbe:
        #   httpGet:
        #     path: /health
        #     port: 3000
        #   initialDelaySeconds: 3
        #   periodSeconds: 3
        # resources:
        #   requests:
        #     memory: "64Mi"
        #     cpu: "50m"
        #   limits:
        #     memory: "64Mi"
        #     cpu: "500m"
